[gd_scene load_steps=13 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2DeathBringerBabyTransparent.png" type="Texture" id=1]
[ext_resource path="res://Babies/DeathBringerBaby.gd" type="Script" id=2]
[ext_resource path="res://Weapons/BoomerDoomer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/M2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/BigChainSaw.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Stationary"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "StationaryLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 72 )

[node name="DeathBringerBaby" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24, 48, 24, 48, 16, -40, 0, -48, -16, -40 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomHand" type="Sprite" parent="."]
position = Vector2( 0, -28 )
texture = ExtResource( 1 )
hframes = 6
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true
hframes = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )
hframes = 6
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="TopHand" type="Sprite" parent="."]
position = Vector2( 0, -28 )
texture = ExtResource( 1 )
hframes = 6
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "StationaryRight"
anims/Stationary = SubResource( 1 )
anims/StationaryLeft = SubResource( 2 )
anims/StationaryRight = SubResource( 3 )
anims/Walk = SubResource( 4 )
anims/WalkLeft = SubResource( 5 )
anims/WalkRight = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="M2" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -28 )

[node name="BigChainSaw" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -28 )

[node name="BabyTechBoomerDoomer" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -28 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -20 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="BigChainSaw/Area2D" to="." method="_on_ChainSaw_body_entered"]
[connection signal="timeout" from="BigChainSaw/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="BigChainSaw"]
